tests/vertical-slice/accept/array_literal_float_sum.hew
fn main() {
    let values = [1.5, 2.5, 3.0];
    var sum: f64 = 0.0;
    for value in values {
        sum = sum + value;
    }
    println(sum);
}
