tests/vertical-slice/reject/rc_set_type_mismatch.hew
fn main() {
    let rc = Rc::new(1);
    rc.set(true);
}
